# COMP2215-pico-sythesiser

./: .gitignore  CMakeLists.txt  README.md  build.bat
pico-synthesiser/: CMakeLists.txt  pico-synthesiser.c  pico-synthesiser_complete.c
